--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ background-color: #FFFFFF;
 /*Ссылки в nav*/
 .navigation-link {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 20px;
     line-height: 26px;
     font-weight: 700;
@@ -53,12 +53,12 @@ background-color: #FFFFFF;
 /*весь main*/
 .main-index{
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     color: black;
 }
 .property{
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 30px;
     line-height: 36px;
     font-weight: 700;
@@ -68,7 +68,7 @@ background-color: #FFFFFF;
 }
 .cause {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 22px;
     line-height: 36px;
     font-weight: 400;
@@ -77,7 +77,7 @@ background-color: #FFFFFF;
 /* настоящий городок*/
 .reasons {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 24px;
     line-height: 28px;
     text-align: center;
@@ -85,7 +85,7 @@ background-color: #FFFFFF;
 /*Список из преимуществ (uppercase)*/
 .reasons h3 {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 24px;
     line-height: 28px;
     text-transform: uppercase;
@@ -93,7 +93,7 @@ background-color: #FFFFFF;
 /*параграфы из преимуществ цвет #333333*/
 .reasons p {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 18px;
     line-height: 21px;
     color: #333333;
@@ -121,7 +121,7 @@ background-color:#83B3D3 ;
 
 .reasons-item:nth-child(7) {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
 background: rgba(131, 179, 211, 0.2);
 }
 /*Секция рассылки*/
@@ -150,7 +150,7 @@ background: rgba(131, 179, 211, 0.2);
     background-position: no-repeat;
     background-size: 100% auto ;
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
@@ -164,7 +164,7 @@ background: rgba(131, 179, 211, 0.2);
 }
 .button-email {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size: 20px;
     line-height: 26px;
     text-align: center;
@@ -175,10 +175,15 @@ background: rgba(131, 179, 211, 0.2);
 /*Телефон*/
 .phone-number {
     font-family: "PT Sans", sans-serif;
-    font-family: normal;
+    font-style: normal;
     font-size:40px;
     color: #000000;
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
 }
+
+
+
+
+/*Внутренняя страница*/
