--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,7 @@ background-color: #FFFFFF;
     line-height: 36px;
     font-weight: 400;
     text-align: center;
+    color: #333333;
 }
 /* настоящий городок*/
 .reasons {
@@ -86,6 +87,7 @@ background-color: #FFFFFF;
 .reasons h3 {
     font-family: "PT Sans", sans-serif;
     font-style: normal;
+    font-weight: bold;
     font-size: 24px;
     line-height: 28px;
     text-transform: uppercase;
@@ -128,6 +130,7 @@ background: rgba(131, 179, 211, 0.2);
 .interested {
     font-size: 30px;
     line-height: 36px;
+    font-weight: bold;
     text-align: center;
     text-transform: uppercase;
 }
@@ -140,6 +143,7 @@ background: rgba(131, 179, 211, 0.2);
 .button-catalog {
     color: #FFFFFF;
     font-size: 20px;
+    font-weight: bold;
     line-height: 36px;
     text-decoration: none;
     background-color:#756257;
@@ -161,6 +165,7 @@ background: rgba(131, 179, 211, 0.2);
     font-size: 22px;
     line-height: 26px;
     text-transform: none;
+    font-weight: normal;
 }
 .button-email {
     font-family: "PT Sans", sans-serif;
@@ -187,3 +192,162 @@ background: rgba(131, 179, 211, 0.2);
 
 
 /*Внутренняя страница*/
+
+/*Основное Фильтры*/
+.filter-hostel {
+    font-family: "PT Sans", sans-serif;
+    font-style: normal;
+    color: #FFFFFF;
+    background-image: url("/images/background-2.jpg");
+    background-position: no-repeat;
+    background-size: 100% auto;
+}
+
+
+/*Заголовок фильтры*/
+.filter-hostel h1 {
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 78px;
+}
+/* ссылка в фильтрах*/
+.breadcrumbs a {
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-decoration: none;
+
+}
+/*Инфраструктура и жилье фильтры*/
+.catalog-filter-title {
+    font-size:20px;
+    line-height: 26px;
+}
+.catalog-filter-item {
+    font-size: 18px;
+    line-height: 23px;
+}
+
+/* Фильтр стоимость*/
+.filter-range {
+    font-size:20px;
+    line-height: 26px;
+}
+
+.number-button {
+    font-size: 18px;
+    line-height: 23px;
+}
+/*кнопка сбросить*/
+.button-filter {
+    color: #FFFFFF;
+    font-size: 18px;
+    line-height: 23px;
+}
+/*Кнопка применить*/
+.color {
+    background-color:#83B3D3;
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 21px;
+    text-transform: uppercase;
+}
+/*Кнопка найдено*/
+.search-hostels {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 39px;
+}
+/*Кнопка select*/
+.select-control {
+    font-family: "PT-sans", sans-serif;
+    font-style: normal;
+    color: black;
+    font-size: 18px;
+    line-height: 23px;
+}
+/*Название гостиницы и ссылка*/
+.name-hostel {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 31px;
+}
+.hostel-from-link  {
+    color: black;
+text-decoration: none;
+}
+/*Гостиница и цена*/
+.price {
+    font-size: 18px;
+line-height: 23px;
+}
+/*Кнопка "подробнее избранное"*/
+.detail-link {
+    color: #FFFFFF;
+    font-size: 16px;
+line-height: 21px;
+text-transform: uppercase;
+background-color:#756257;
+}
+.detail-button {
+    color: #FFFFFF;
+    font-size: 16px;
+line-height: 21px;
+text-transform: uppercase;
+background-color:#83B3D3;
+}
+/*Рейтинг*/
+.rating {
+    font-size: 16px;
+line-height: 21px;
+text-transform: uppercase;
+   background-color:#F2F2F2;
+}
+
+/*Кнопка загрузить еще*/
+.button-upload{
+    font-size: 20px;
+line-height: 26px;
+font-weight: bold;
+color: #FFFFFF;
+text-transform: uppercase;
+text-align: center;
+background-color:#83B3D3;
+}
+
+/*Номера страниц*/
+.page-list {
+font-weight: bold;
+font-size: 20px;
+line-height: 26px;
+}
+
+.page-link {
+    color: #FFFFFF;
+    background-color:#83B3D3;
+    text-decoration: none;
+}
+.page-hostel-number {
+    color: #333333;
+    font-size: 18px;
+line-height: 23px;
+}
+
+.mailing-hostels{
+
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    color: #000F;
+    text-transform: uppercase;
+}
+.mailing-hostels h2 {
+    font-size: 30px;
+}
+
+.mailing-description-catalog {
+    font-size: 22px;
+    line-height: 26px;
+    text-transform:none;
+    color: #333333;
+}
