--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,7 @@ background-color: #FFF;
 }
 
 
-}
+
 /*Кнопка "хочу сюда"*/
 .button-link{
     background-color:#756257;
@@ -95,9 +95,8 @@ background-color: #FFF;
 
 /*div для фонового изображения седона*/
 .gorgeous {
-    background-image: url("/images/background-3.jpg");
-    background-position: no-repeat;
-    background-size: 100% auto;
+    background-image: url("/images/welcome.svg"),
+    url("/images/background-3.jpg");
     background-repeat: no-repeat;
 }
 
@@ -204,7 +203,7 @@ background: rgba(131, 179, 211, 0.2);
 /*Секция подписаться*/
 .mailing {
     background-image: url("/images/background-1.jpg");
-    background-position: no-repeat;
+    background-repeat: no-repeat;
     background-size: 100% auto;
     font-family: "PT Sans", sans-serif;
     font-style: normal;
@@ -252,7 +251,7 @@ background: rgba(131, 179, 211, 0.2);
     font-style: normal;
     color: #FFF;
     background-image: url("/images/background-2.jpg");
-    background-position: no-repeat;
+    background-repeat: no-repeat;
     background-size: 100% auto;
 }
 
