--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@ background-color: #FFF;
 }
 /*Ссылки в nav*/
 .navigation-link {
+    display: block;
     font-size: 20px;
     line-height: 26px;
     font-weight: 700;
@@ -47,13 +48,25 @@ background-color: #FFF;
     color: black;
     background-color: #FFF;
     text-decoration: none;
+    padding: 10px 10px;
+}
+
+.link {
+    display: block;
+}
+
+.navigation-item {
+    margin: 20px 15px;
 }
 
 .navigation-list {
-width: 500px;
-margin: 0;
-padding: 0;
+    display: flex;
+    list-style-type: none;
+    width: 550px;
+    margin: 0;
+    padding: 0;
 }
+
 
 .navigation-user {
 width: 300px;
@@ -78,6 +91,7 @@ margin-left: auto;
 .twitter-link {
     background-image: url("/images/social-twitter.svg");
     background-repeat: no-repeat;
+
 }
 
 .facebook-link {
@@ -122,6 +136,7 @@ margin-left: auto;
 
 /*div для фонового изображения седона*/
 .gorgeous {
+    min-height: 485px;
     margin: 0 auto;
     background-image: url("/images/welcome.svg"),
     url("/images/background-3.jpg");
@@ -150,6 +165,7 @@ margin-left: auto;
     text-align: center;
     color: black;
     text-transform: uppercase;
+    margin-bottom: 23px;
 }
 
 .cause {
@@ -159,6 +175,7 @@ margin-left: auto;
     font-weight: 400;
     text-align: center;
     color: #333333;
+    margin-bottom: 79px;
 }
 
 /* настоящий городок*/
@@ -176,6 +193,7 @@ margin-left: auto;
     font-size: 24px;
     line-height: 28px;
     text-transform: uppercase;
+    margin-bottom: 25px;
 }
 
 /*параграфы из преимуществ цвет #333333*/
@@ -191,6 +209,7 @@ margin-left: auto;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    list-style-type: none;
 }
 
 .reasons-item {
@@ -230,6 +249,7 @@ background: rgba(131, 179, 211, 0.2);
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+    margin-bottom: 15px;
 }
 
 .data-travel {
@@ -237,6 +257,7 @@ background: rgba(131, 179, 211, 0.2);
     line-height: 26px;
     text-align: center;
     color: #333333;
+    margin-bottom: 71px;
 }
 
 .button-catalog {
@@ -260,6 +281,7 @@ background: rgba(131, 179, 211, 0.2);
     text-align: center;
     color: #FFF;
     text-transform: uppercase;
+    margin-bottom: 15px;
 }
 
 .mailing-description {
@@ -267,6 +289,7 @@ background: rgba(131, 179, 211, 0.2);
     line-height: 26px;
     text-transform: none;
     font-weight: normal;
+    margin-bottom: 25px;
 }
 
 .button-email {
@@ -322,8 +345,16 @@ background: rgba(131, 179, 211, 0.2);
     color: #FFF;
     text-decoration: none;
 }
+
+.breadcrumbs {
+    display: flex;
+    list-style-type: none;
+}
+
+
+
 .visually-hidden {
-visibility: hidden;
+ visibility: hidden;
 }
 /*Хлебные крошки*/
 .home-logo {
@@ -491,8 +522,16 @@ line-height: 23px;
 }
 
 .footer-social {
+    display: flex;
+    list-style-type: none;
     width: 110px;
     margin-right: 80px;
+}
+
+.social-item {
+    min-width: 18px;
+    min-height: 15px;
+    margin-right: 30px;
 }
 
 .footer-container {
@@ -500,3 +539,5 @@ line-height: 23px;
     width: 1200px;
     margin: 0 auto;
 }
+
+
